# MyRustApp

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql  logs.txt  nginx.conf
.github/workflows/: rust.yml
my_rust_app/: Cargo.toml
my_rust_app/src/: lib.rs  main.rs
my_rust_app/tests/: test.rs
src/: handler.rs  lib.rs  main.rs  models.rs
templates/: index.html
tests/: test.rs
