[package]
name = "my_rust_app"
version = "0.1.0"
edition = "2021"

# Define a binary target (this is required)
[[bin]]
name = "my_rust_app"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]  # Add these for testing
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] } # Enables `ServiceExt`
axum = "0.6" # Use the correct Axum version for compatibility
hyper = "0.14" # Required for testing with HTTP requests
actix-rt = "2"