[package]
name = "my_rust_app"
version = "0.1.0"
edition = "2021"

# Define a binary target (this is required)
[[bin]]
name = "my_rust_app"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
simplelog = "0.12.2" 
log = "0.4"

[dev-dependencies]  # Add these for testing
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] } # Enables `ServiceExt`
axum = "0.8.1" # Use the correct Axum version for compatibility
hyper = "1.6.0" # Required for testing with HTTP requests
actix-rt = "2"